--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swoole: [5.0-php8.1, 5.0-php8.0, 4.8-php8.1, 4.8-php8.0, 4.8-php7.4]
+        swoole:
+          [
+            5.0-php8.2,
+            5.0-php8.1,
+            5.0-php8.0,
+            4.8-php8.1,
+            4.8-php8.0,
+            4.8-php7.4,
+          ]
     env:
       SWOOLE_DOCKER_VERSION: ${{ matrix.swoole }}
       REDIS_SERVER_HOST: redis
@@ -24,13 +32,6 @@ jobs:
           docker exec swoole php --ri swoole
           docker exec swoole composer -V
           docker exec swoole composer update --no-interaction --prefer-dist --no-progress
-      - name: Wait for container
-        uses: stringbean/docker-healthcheck-action@v1
-        with:
-          container: redis
-          wait-time: 120
-          require-status: running
-          require-healthy: true
       - name: Test
         run: docker exec swoole composer test
       - name: Print logs
